<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidMockGpx</string>
    <string name="no_filemanager_installed">No compatible file manager found</string>
    <string name="file_name">File name</string>
    <string name="open_title">Select file to open</string>
    <string name="open_button">Open</string>
    <string name="save_title">Select file to save</string>
    <string name="save_button">Save</string>
    <string name="pick_directory_title">Select a folder</string>
    <string name="pick_directory_button">Use this folder</string>
    
    <string name="please_wait">Please Wait</string>
    <string name="loading_file">Loading GPX File</string>
    <string name="input_longitude">Input longitude</string>
    <string name="input_latitude">Input latitude</string>
    <string name="set_single_location">Set Single Location</string>
    <string name="input_playback_delay_milliseconds">Input Playback Delay (milliseconds):</string>
    <string name="service_not_connected">Service not connected!</string>
    <string name="mock_setting_needs_to_be_enabled">MockLocations needs to be enabled</string>
    <string name="gpx_playback_running">GPX Playback Running</string>

</resources>
