<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="location" type="com.twolinessoftware.android.model.Location"/>
    </data>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/file_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/file_path"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/file_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickOpenFile"
                android:src="@drawable/ic_launcher_folder_small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/label_edit_text_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_playback_delay_milliseconds"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"/>

            <EditText
                android:id="@+id/editTextDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/label_edit_text_delay"
                android:imeOptions="actionNext"
                android:inputType="number">

                <requestFocus/>
            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:focusableInTouchMode="true"
            android:onClick="onClickStart"
            android:text="Start Playback"
            />

        <Button
            android:id="@+id/stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:onClick="onClickStop"
            android:text="Stop Playback"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/singleLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={location.latitude}"
                android:hint="@string/input_latitude"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/singleLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={location.longitude}"
                android:hint="@string/input_longitude"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />


            <Button
                android:id="@+id/setSingleLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="onClickSingle"
                android:text="@string/set_single_location"/>

            <TextView
                android:id="@+id/geoResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </LinearLayout>
</layout>

